objects/IS_System_Component__c.object
<CustomObject>
    <description>Represents a part of the system metadata, such as a custom object, a workflow, or an Apex class</description>
    <fields>
        <fullName>Attributes__c</fullName>
        <description>Attribute Icons for use in list views, related lists and reports</description>
        <formula>IF(SOX_Flag__c != &apos;&apos;,SOX_Flag__c + &apos; &apos;,&apos;&apos;)+
IF(Integration_Flag__c != &apos;&apos;,Integration_Flag__c + &apos; &apos;,&apos;&apos;)</formula>
        <label>Attributes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BaseHash__c</fullName>
        <description>Used by Metadata Tool</description>
        <label>BaseHash</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this a non-standard component?</inlineHelpText>
        <label>Custom?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Type__c</fullName>
        <label>Data Type</label>
        <picklist>
            <picklistValues>
                <fullName>Auto Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formula</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roll-Up Summary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lookup Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master-Detail Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Lookup Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checkbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Currency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date/Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geolocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-select Picklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text Area (Long)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text Area (Rich)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text (Encrypted)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>URL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Database_Name__c</fullName>
        <label>Database Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_Contents__c</fullName>
        <label>Description/Contents</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Development_Degree__c</fullName>
        <description>Formula results in decimal value portion of the Modification Count value</description>
        <formula>Modification_Count__c  - FLOOR(Modification_Count__c)</formula>
        <inlineHelpText>Decimal value from Modification Count, used to determine Status</inlineHelpText>
        <label>Development Degree</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duplicate_Matching__c</fullName>
        <label>Duplicate Matching</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Path_Server__c</fullName>
        <label>File Path/Server</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Notes__c</fullName>
        <label>General Notes</label>
        <length>8192</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Hash__c</fullName>
        <description>Used by Metadata Tool</description>
        <label>Hash</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IS_System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IS System</label>
        <referenceTo>IS_System__c</referenceTo>
        <relationshipLabel>IS System Components</relationshipLabel>
        <relationshipName>IS_System_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>In_Production__c</fullName>
        <formula>AND(
Modification_Count__c &gt;= 1,
Removed__c = FALSE
)</formula>
        <label>In Production?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration_Details__c</fullName>
        <label>Integration Details</label>
        <length>8192</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Integration_Flag__c</fullName>
        <formula>IF(Integration_Use__c,IMAGE(&apos;/resource/AttributeIcons/connect16.png&apos;, &apos;Used in Integration&apos;),&apos;&apos;)</formula>
        <inlineHelpText>Based on Integration Use field</inlineHelpText>
        <label>Integration Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Integration Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_API_Name__c</fullName>
        <formula>RIGHT(Object_API_Name__c,LEN(Object_API_Name__c)-FIND(&apos;.&apos;,Object_API_Name__c))</formula>
        <inlineHelpText>API name of the object itself, without the parent object</inlineHelpText>
        <label>Item API Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lookup_Target_API_Name__c</fullName>
        <formula>Lookup_Target__r.Object_API_Name__c</formula>
        <label>Lookup Target API Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lookup_Target_Label__c</fullName>
        <formula>Lookup_Target__r.Object_Label__c</formula>
        <label>Lookup Target Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lookup_Target__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lookup Target</label>
        <referenceTo>IS_System_Component__c</referenceTo>
        <relationshipLabel>Lookup References</relationshipLabel>
        <relationshipName>Lookup_Target</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Managed_Package_Details__c</fullName>
        <label>Managed Package Details</label>
        <length>8192</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Managed_Package_Flag__c</fullName>
        <formula>IF(Managed_Package_Related__c,IMAGE(&apos;/resource/AttributeIcons/lock16.png&apos;, &apos;Used in a Managed Package&apos;),&apos;&apos;)</formula>
        <inlineHelpText>Based on Managed Package Related field</inlineHelpText>
        <label>Managed Package Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Managed_Package_Related__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this object related to or included in a managed package?</inlineHelpText>
        <label>Managed Package Related</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetadataItemFullName__c</fullName>
        <description>Used by Metadata Tool (External Id)</description>
        <externalId>true</externalId>
        <label>MetadataItemFullName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modification_Count__c</fullName>
        <inlineHelpText>Number of modifications - Decimal value indicates changes are in development</inlineHelpText>
        <label>Modification Count</label>
        <summarizedField>IS_System_Modification__c.Change_Value__c</summarizedField>
        <summaryForeignKey>IS_System_Modification__c.IS_System_Component__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Deployment__c</fullName>
        <inlineHelpText>When was an update to this object most recently deployed?</inlineHelpText>
        <label>Most Recent Deployment</label>
        <summarizedField>IS_System_Modification__c.Deployment_Date_Actual__c</summarizedField>
        <summaryForeignKey>IS_System_Modification__c.IS_System_Component__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Created_By__c</fullName>
        <description>Name of the person that originally created this object.</description>
        <label>Object Created By</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Created__c</fullName>
        <description>Original creation date of this object.</description>
        <label>Object Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Object_Label__c</fullName>
        <label>Object Label</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Last_Modified_By__c</fullName>
        <inlineHelpText>User who made the last modification to this component in any environment</inlineHelpText>
        <label>Object Last Modified By</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Last_Modified__c</fullName>
        <inlineHelpText>Timestamp of when this component was last modifed in any environment</inlineHelpText>
        <label>Object Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <label>Object Type</label>
        <picklist>
            <picklistValues>
                <fullName>Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex Sharing Reason</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex Trigger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assignment Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auth Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto-Response Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Button/Link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compact Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Console Component</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Field</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Label</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Metadata Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Object</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Permission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Report Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Setting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Data Source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Set</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow Definition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow Trigger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Folder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page Component</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent_API_Name__c</fullName>
        <formula>IF(NOT(ISBLANK(Parent__c)), 
Parent__r.Item_API_Name__c, 
LEFT(Object_API_Name__c,FIND(&apos;.&apos;,Object_API_Name__c)))</formula>
        <inlineHelpText>Parent Object API Name extracted from Object API or related Parent name</inlineHelpText>
        <label>Parent API Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Label__c</fullName>
        <formula>IF(RecordType.Name = &apos;Configuration&apos;,
  IF(NOT(ISBLANK(Parent__c)), 
    Parent__r.Object_Label__c,&apos;&apos;),&apos;&apos;)</formula>
        <label>Parent Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>IS_System_Component__c</referenceTo>
        <relationshipLabel>Child Objects</relationshipLabel>
        <relationshipName>IS_System_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Removed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has this been removed from Production?</inlineHelpText>
        <label>Removed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SOX_Flag__c</fullName>
        <formula>IF(SOX_Object__c,IMAGE(&quot;/resource/AttributeIcons/cloud-socks-darkblue16.png&quot;, &quot;SOX Object&quot;),&quot;&quot;)</formula>
        <inlineHelpText>Based on SOX Object field</inlineHelpText>
        <label>SOX Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOX_Object__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this a SOX controlled object?</inlineHelpText>
        <label>SOX Object</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salesforce_Object_Id__c</fullName>
        <externalId>true</externalId>
        <label>Salesforce Object Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Server_Name__c</fullName>
        <label>Server Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Populates whether the record was created by user or manually</description>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Manual</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Automated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(AND(Development_Degree__c &gt; 0,Modification_Count__c &lt; 1),&apos;Pending Development&apos;,
IF(Removed__c,&apos;Deleted&apos;,
IF(Modification_Count__c &gt; 1 || Server_Name__c = &apos;Production&apos; ,&apos;Production&apos;,
&apos;Not Yet Released&apos;)))

/*
Hash    ModCount   DevDeg   Removed  Status
xxxx    0.00       0.00     F        Prod          hash has value, devdeg = 0 (loaded from mod tool, no is mods
xxxx    1.00       0.00     F        Prod
&lt;&lt;&gt;&gt;    0.00       0.00     F        not yet
xxxx    0.10       0.10     F        pending dev
xxxx    1.10       0.10     F        pending dev
&lt;&lt;&gt;&gt;    0.10       0.10     F        pending dev

*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates if there is a pending modification to this object</inlineHelpText>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Where_is_this_used__c</fullName>
        <inlineHelpText>Apps, Integrations, etc</inlineHelpText>
        <label>Where is this used?</label>
        <length>8192</length>
        <type>Html</type>
    </fields>
    <label>IS System Component</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Parent__c</columns>
        <columns>IS_System__c</columns>
        <columns>Object_Type__c</columns>
        <columns>Object_API_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Most_Recent_Deployment__c</columns>
        <columns>Modification_Count__c</columns>
        <columns>Attributes__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Salesforce</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Object_Label__c</columns>
        <columns>Object_API_Name__c</columns>
        <columns>Object_Type__c</columns>
        <columns>Data_Type__c</columns>
        <columns>Parent__c</columns>
        <columns>Custom__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Server_Name__c</field>
            <operation>equals</operation>
            <value>Production</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>contract</value>
        </filters>
        <label>All Salesforce</label>
    </listViews>
    <listViews>
        <fullName>All_Salesforce_Components</fullName>
        <columns>NAME</columns>
        <columns>Parent__c</columns>
        <columns>IS_System__c</columns>
        <columns>Object_Type__c</columns>
        <columns>Object_API_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Most_Recent_Deployment__c</columns>
        <columns>Modification_Count__c</columns>
        <columns>Attributes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IS_System__c</field>
            <operation>contains</operation>
            <value>Salesforce</value>
        </filters>
        <label>All Salesforce Components</label>
    </listViews>
    <listViews>
        <fullName>Code_Salesforce</fullName>
        <columns>NAME</columns>
        <columns>Parent__c</columns>
        <columns>IS_System__c</columns>
        <columns>Object_Type__c</columns>
        <columns>Object_API_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Most_Recent_Deployment__c</columns>
        <columns>Modification_Count__c</columns>
        <columns>Attributes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IS_System_Component__c.Code</value>
        </filters>
        <label>Code - Salesforce</label>
    </listViews>
    <listViews>
        <fullName>Configuration_Fields</fullName>
        <columns>NAME</columns>
        <columns>Parent__c</columns>
        <columns>IS_System__c</columns>
        <columns>Object_Type__c</columns>
        <columns>Data_Type__c</columns>
        <columns>Object_API_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Most_Recent_Deployment__c</columns>
        <columns>Modification_Count__c</columns>
        <columns>Attributes__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lookup_Target_Label__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>Field</value>
        </filters>
        <label>Configuration - Fields</label>
    </listViews>
    <listViews>
        <fullName>Configuration_Salesforce</fullName>
        <columns>NAME</columns>
        <columns>Parent__c</columns>
        <columns>IS_System__c</columns>
        <columns>Object_Type__c</columns>
        <columns>Object_API_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Most_Recent_Deployment__c</columns>
        <columns>Modification_Count__c</columns>
        <columns>Attributes__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IS_System_Component__c.Configuration</value>
        </filters>
        <label>Configuration - Salesforce</label>
    </listViews>
    <listViews>
        <fullName>Configuration_Workflow</fullName>
        <columns>NAME</columns>
        <columns>Parent__c</columns>
        <columns>IS_System__c</columns>
        <columns>Object_Type__c</columns>
        <columns>Object_API_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Most_Recent_Deployment__c</columns>
        <columns>Modification_Count__c</columns>
        <columns>Attributes__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object_Type__c</field>
            <operation>startsWith</operation>
            <value>Workflow</value>
        </filters>
        <label>Configuration - Workflow</label>
    </listViews>
    <listViews>
        <fullName>Custom_Label</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object_Type__c</field>
            <operation>equals</operation>
            <value>Custom Label</value>
        </filters>
        <label>Custom Label</label>
    </listViews>
    <listViews>
        <fullName>Custom_Label1</fullName>
        <columns>NAME</columns>
        <columns>Custom__c</columns>
        <columns>In_Production__c</columns>
        <columns>Item_API_Name__c</columns>
        <columns>Managed_Package_Flag__c</columns>
        <columns>Object_API_Name__c</columns>
        <columns>Object_Label__c</columns>
        <columns>Object_Type__c</columns>
        <columns>Parent__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object_Type__c</field>
            <operation>equals</operation>
            <value>Custom Label</value>
        </filters>
        <label>Custom Label</label>
    </listViews>
    <listViews>
        <fullName>EmailTemplate</fullName>
        <columns>NAME</columns>
        <columns>Custom__c</columns>
        <columns>In_Production__c</columns>
        <columns>Object_API_Name__c</columns>
        <columns>MetadataItemFullName__c</columns>
        <columns>Object_Last_Modified__c</columns>
        <columns>Object_Last_Modified_By__c</columns>
        <columns>Parent__c</columns>
        <columns>Removed__c</columns>
        <columns>Salesforce_Object_Id__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object_Type__c</field>
            <operation>equals</operation>
            <value>Email Template</value>
        </filters>
        <label>Email Templates</label>
    </listViews>
    <listViews>
        <fullName>Email_Alert</fullName>
        <columns>NAME</columns>
        <columns>Object_API_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object_Type__c</field>
            <operation>equals</operation>
            <value>Workflow Email Alert</value>
        </filters>
        <label>Email Alert</label>
    </listViews>
    <listViews>
        <fullName>Managed_Package_Components</fullName>
        <columns>NAME</columns>
        <columns>Parent__c</columns>
        <columns>IS_System__c</columns>
        <columns>Object_Type__c</columns>
        <columns>Object_API_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Most_Recent_Deployment__c</columns>
        <columns>Modification_Count__c</columns>
        <columns>Attributes__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Managed_Package_Related__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Managed Package Components</label>
    </listViews>
    <listViews>
        <fullName>Objects</fullName>
        <columns>NAME</columns>
        <columns>Custom__c</columns>
        <columns>Object_Label__c</columns>
        <columns>Object_API_Name__c</columns>
        <columns>Object_Type__c</columns>
        <columns>Salesforce_Object_Id__c</columns>
        <columns>Object_Last_Modified__c</columns>
        <columns>Object_Last_Modified_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object_Type__c</field>
            <operation>equals</operation>
            <value>Custom Object</value>
        </filters>
        <label>Objects</label>
    </listViews>
    <listViews>
        <fullName>Other_Type_Salesforce</fullName>
        <columns>NAME</columns>
        <columns>Parent__c</columns>
        <columns>IS_System__c</columns>
        <columns>Object_Type__c</columns>
        <columns>Object_API_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Most_Recent_Deployment__c</columns>
        <columns>Modification_Count__c</columns>
        <columns>Attributes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IS_System_Component__c.Other</value>
        </filters>
        <filters>
            <field>IS_System__c</field>
            <operation>contains</operation>
            <value>Salesforce</value>
        </filters>
        <label>Other Type - Salesforce</label>
    </listViews>
    <listViews>
        <fullName>Page_Layouts</fullName>
        <columns>NAME</columns>
        <columns>Parent__c</columns>
        <columns>IS_System__c</columns>
        <columns>Object_Type__c</columns>
        <columns>Object_API_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Most_Recent_Deployment__c</columns>
        <columns>Modification_Count__c</columns>
        <columns>Attributes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object_Type__c</field>
            <operation>equals</operation>
            <value>Page Layout</value>
        </filters>
        <label>Page Layouts</label>
    </listViews>
    <nameField>
        <label>Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IS System Components</pluralLabel>
    <recordTypes>
        <fullName>Code</fullName>
        <active>true</active>
        <description>Salesforce: A component updated by coding, such as an Apex trigger or Visualforce page</description>
        <label>Code</label>
    </recordTypes>
    <recordTypes>
        <fullName>Configuration</fullName>
        <active>true</active>
        <description>Salesforce: A component updated by configuration, such as a workflow, custom object, field, or profile</description>
        <label>Configuration</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <description>Used for non-Salesforce components, such as for Workday or JobScience</description>
        <label>Other</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Integration_Details_Required</fullName>
        <active>true</active>
        <description>If Integration Use is TRUE, Integration Details is required</description>
        <errorConditionFormula>AND(
Integration_Use__c = TRUE,
ISBLANK(Integration_Details__c)
)</errorConditionFormula>
        <errorMessage>Please enter a value into Integration Details when Integration Use is checked.</errorMessage>
    </validationRules>
</CustomObject>